@@ -1,5 +1,10 @@
 Version 2.00.21 - 
 =============================
+  Fix extents_moved metadata size comment.
+  Remove duplicate line in pvremove help text.
+  Support variable mirror region size.
+  Support PE ranges in pvmove source PV.
+  Fixes to as-yet-unused LV segment splitting code.
   Change alloc_areas to pe_ranges and allow suppression of availability checks.
   Add dev_size column to pvs.
   Add report columns for in-kernel device number.
